<resources>
    <string name="app_name">NutriCheck</string>

    <string name="title_section1">Nutrition</string>
    <string name="title_section2">Calorie Counter</string>
    <string name="title_section3">Blog</string>
    <string name="title_section4">License</string>

    <string name="tabs_title_section1">TRENDING</string>
    <string name="tabs_title_section2">RECENT</string>
    <string name="tabs_title_section3">FAVORITE</string>
    <string name="tabs_title_section4">MY FOOD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="auto_complete_title">Search</string>
    <string name="auto_complete_hint">Search for food</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="food_name">Food Name</string>
    <string name="portion_size">Portion size</string>

    <string name="nutrition_fat_in_mg">Fat (mg)</string>
    <string name="nutrition_carbs_in_mg">Carbs (mg)</string>
    <string name="nutrition_protein_in_mg">Protein (mg)</string>
    <string name="nutrition_calories_in_kcal">Calories (kcal)</string>

    <string name="nutrition_fibre_in_mg">Dietary Fibre (mg)</string>
    <string name="nutrition_trans_in_mg">Trans Fat (mg)</string>
    <string name="nutrition_saturated_in_mg">Saturated (mg)</string>
    <string name="nutrition_sodium_in_mg">Sodium (mg)</string>
    <string name="nutrition_potassium_in_mg">Potassium (mg)</string>
    <string name="nutrition_poly_in_mg">Poly Unsaturated (mg)</string>
    <string name="nutrition_mono_in_mg">Mono Unsaturated (mg)</string>
    <string name="nutrition_sugar_in_mg">Sugar (mg)</string>
    <string name="nutrition_cholesterol_in_mg">cholesterol (mg)</string>

    <string name="nutrition_fat">Fat</string>
    <string name="nutrition_carbs">Carbs</string>
    <string name="nutrition_protein">Protein</string>
    <string name="nutrition_calories">Calories</string>

    <string name="nutrition_fibre">Dietary Fibre</string>
    <string name="nutrition_trans">Trans Fat</string>
    <string name="nutrition_saturated">Saturated</string>
    <string name="nutrition_sodium">Sodium</string>
    <string name="nutrition_potassium">Potassium</string>
    <string name="nutrition_poly">Poly Unsaturated</string>
    <string name="nutrition_mono">Mono Unsaturated</string>
    <string name="nutrition_sugar">Sugar</string>
    <string name="nutrition_cholesterol">cholesterol</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_food_detail">FoodDetailActivity</string>
    <string name="title_activity_add_food">Add Food</string>
</resources>
